--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     buildToolsVersion "30.0.1"
 
     defaultConfig {
-        applicationId "com.fentao.tech.wwtplayer"
+        applicationId "com.fentao.tech.sportlive"
         minSdkVersion 16
         targetSdkVersion 30
         versionCode 1
