--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,17 +6,20 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:usesCleartextTraffic="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.WWTPlayer">
+        android:theme="@style/Theme.SportLive"
+        android:usesCleartextTraffic="true">
         <activity
-            android:name="com.fentao.tech.sportlive.PlayerActivity"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.WWTPlayer.NoActionBar"
+            android:name=".ui.home.PlayerActivity"
+            android:theme="@style/Theme.SportLive.NoActionBar"
+            ></activity>
+        <activity
+            android:name=".MainActivity"
             android:configChanges="keyboardHidden|orientation|screenSize|screenLayout"
+            android:label="@string/app_name"
             android:screenOrientation="portrait"
-            >
+            android:theme="@style/Theme.SportLive.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
